[gd_scene load_steps=6 format=3 uid="uid://dhfywm5mrjx77"]

[ext_resource type="Script" path="res://app/main-menu/select-player-weapon/select_player_weapon.gd" id="1_fwij1"]
[ext_resource type="PackedScene" uid="uid://desy7wwqh5j8x" path="res://ui/game-ui/game-header.tscn" id="2_2xri3"]
[ext_resource type="PackedScene" uid="uid://d1q1oo6dpavt8" path="res://ui/game-ui/game-panel.tscn" id="3_yceuk"]
[ext_resource type="Texture2D" uid="uid://cpcey5vrxd20" path="res://common/scroll.jpg" id="4_f22fc"]
[ext_resource type="PackedScene" uid="uid://l4g7jgfosw2v" path="res://ui/game-ui/game-button.tscn" id="5_x5mke"]

[node name="MainMenuSelectPlayerWeapon" type="VBoxContainer"]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -270.0
offset_top = 10.0
offset_right = 270.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4
script = ExtResource("1_fwij1")

[node name="Header" parent="." instance=ExtResource("2_2xri3")]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
size_flags_vertical = 0
label = "Choose A Weapon"

[node name="Selector" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 4

[node name="List" parent="Selector" instance=ExtResource("3_yceuk")]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Selector/List"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Layout" type="VBoxContainer" parent="Selector/List/Margin"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="PlayerWeaponDetails" type="VBoxContainer" parent="Selector"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="View" parent="Selector/PlayerWeaponDetails" instance=ExtResource("3_yceuk")]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Selector/PlayerWeaponDetails/View"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="View" type="SubViewportContainer" parent="Selector/PlayerWeaponDetails/View/Margin"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="Selector/PlayerWeaponDetails/View/Margin/View"]
disable_3d = true
handle_input_locally = false
size = Vector2i(256, 200)
render_target_update_mode = 4

[node name="Background" type="Sprite2D" parent="Selector/PlayerWeaponDetails/View/Margin/View/SubViewport"]
position = Vector2(128, 100)
scale = Vector2(1, 0.78)
texture = ExtResource("4_f22fc")

[node name="Stats" parent="Selector/PlayerWeaponDetails" instance=ExtResource("3_yceuk")]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Selector/PlayerWeaponDetails/Stats"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Layout" type="VBoxContainer" parent="Selector/PlayerWeaponDetails/Stats/Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Description" type="RichTextLabel" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/italics_font_size = 14
theme_override_font_sizes/mono_font_size = 14
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 14
text = "This is just some weapon details"
metadata/_edit_lock_ = true

[node name="Stats" type="GridContainer" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout"]
layout_mode = 2
columns = 2

[node name="MaxAmmo" type="HBoxContainer" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats/MaxAmmo"]
layout_mode = 2
size_flags_horizontal = 3
text = "Max Ammo"

[node name="Value" type="Label" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats/MaxAmmo"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "5"
horizontal_alignment = 1

[node name="Damage" type="HBoxContainer" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats/Damage"]
layout_mode = 2
size_flags_horizontal = 3
text = "Damage"

[node name="Value" type="Label" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats/Damage"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "5"
horizontal_alignment = 1

[node name="Range" type="HBoxContainer" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats/Range"]
layout_mode = 2
size_flags_horizontal = 3
text = "Range"

[node name="Value" type="Label" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats/Range"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "200"
horizontal_alignment = 1

[node name="Speed" type="HBoxContainer" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats/Speed"]
layout_mode = 2
size_flags_horizontal = 3
text = "Speed"

[node name="Value" type="Label" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats/Speed"]
layout_mode = 2
size_flags_horizontal = 8
text = "20"

[node name="Accuracy" type="HBoxContainer" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats/Accuracy"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accuracy"

[node name="Value" type="Label" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats/Accuracy"]
layout_mode = 2
size_flags_horizontal = 8
text = "0.2"

[node name="ReloadSpeed" type="HBoxContainer" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats"]
layout_mode = 2

[node name="Label" type="Label" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats/ReloadSpeed"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reload"

[node name="Value" type="Label" parent="Selector/PlayerWeaponDetails/Stats/Margin/Layout/Stats/ReloadSpeed"]
layout_mode = 2
size_flags_horizontal = 8
text = "0.2"

[node name="Controls" parent="." instance=ExtResource("3_yceuk")]
layout_mode = 2
size_flags_vertical = 8

[node name="Margin" type="MarginContainer" parent="Controls"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Layout" type="HBoxContainer" parent="Controls/Margin"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Return" parent="Controls/Margin/Layout" instance=ExtResource("5_x5mke")]
custom_minimum_size = Vector2(87, 48)
layout_mode = 2
label = "Return"

[node name="Continue" parent="Controls/Margin/Layout" instance=ExtResource("5_x5mke")]
custom_minimum_size = Vector2(108, 48)
layout_mode = 2
label = "Continue"

[connection signal="button_up" from="Controls/Margin/Layout/Return" to="." method="_return_from"]
[connection signal="button_up" from="Controls/Margin/Layout/Continue" to="." method="_continue_to"]
